# algorithms-Prim-Djkstry

./: CMakeLists.txt  DataCreator.cpp  DataCreator.h  Dijkstry.cpp  Dijkstry.h  KruskalList.cpp  KruskalList.h  Menu.cpp  Menu.h  PrimeL.cpp  PrimeL.h  StopWatch.cpp  StopWatch.h  Tests.cpp  Tests.h  dane.txt  main.cpp
