cmake_minimum_required(VERSION 3.15)
project(algorithms_Kruskal_Prim_Djkstry_BellmanFord)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithms_Kruskal_Prim_Djkstry_BellmanFord main.cpp PrimeL.cpp PrimeL.h Dijkstry.cpp Dijkstry.h StopWatch.h StopWatch.cpp DataCreator.cpp DataCreator.h Menu.cpp Menu.h Tests.cpp Tests.h)